--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pure-js-json-download-utility",
+    "name": "client-side-json-exporter-sam",
     "version": "1.0.0",
     "description": "A lightweight utility for client-side file downloads using Blob API and Data URLs",
     "main": "dist/index.js",
@@ -22,19 +22,20 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/samanbalahang/DownloadableJson.git"
+        "url": "https://github.com/samanbalahang/DownloadableJson"
     },
     "bugs": {
-        "url": "https://github.com/samanbalahang/DownloadableJson.git/issues"
+        "url": "https://github.com/samanbalahang/DownloadableJson/issues"
     },
-    "homepage": "https://github.com/samanbalahang/DownloadableJson.git#readme",
+    "homepage": "https://github.com/samanbalahang/DownloadableJson#readme",
     "files": [
-        "dist"
+        "dist",
+        "demo"
     ],
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^22.0.2",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "rollup": "^2.79.2",
-        "rollup-plugin-terser": "^7.0.2"
+        "@rollup/plugin-commonjs": "^28.0.3",
+        "@rollup/plugin-node-resolve": "^16.0.1",
+        "rollup": "^4.41.0",
+        "rollup-plugin-terser": "^0.4.4"
     }
 }
