--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
-        "rollup": "^4.41.0",
-        "rollup-plugin-terser": "^0.4.3"
+        "@rollup/plugin-terser": "^0.4.4",
+        "rollup": "^4.41.0"
     }
 }
